# scratchpad

ahk/: autohotkey.ahk
python useful scripts/: scripts.py
qt_static_with_cmake/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.ui  node.cpp
qt_with_cmake/: .gitignore  CMakeLists.txt  generate_cmake.bat  main.cpp  mainwindow.ui  openglwidget.cpp  openglwidget.hpp  openglwindow.cpp  openglwindow.hpp  projectwindow.cpp  projectwindow.hpp  sdlwindow.cpp  sdlwindow.hpp
qt_with_cmake/cmake/: FindGLEW.cmake
qt_with_cmake/windows/lib/: SDL2.lib  SDL2_d.lib  SDL2main.lib  SDL2main_d.lib  SDL2test.lib  glew32.lib  glew32_d.lib
test_qt/qt_console/: qt_console.pro
test_qt_widget/src/qt/: qt.pro
volumetric_test/: vol_even_more_simplified.glsl  vol_simplified.glsl  vol_test.glsl
